--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-js": "^2.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -15,6 +16,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "stripe": "^12.17.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
